# ctapipe

./: .buildinfo  .codacy.yml  .codespell-ignores  .gitignore  .gitmodules  .landscape.yml  .mailmap  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .spyderproject  .spyderworkspace  .travis.yml  .zenodo.json  <tempfile._TemporaryFileWrapper object at 0x1819803dd8>  AUTHORS  CHANGES.rst  CODEOWNERS  FAQ.html  History.md  MANIFEST.in  Makefile  README.md  README.rst  bibliography.html  changelog.html  config_to_fits.fits  create_conda_env.sh  cta-env.yml  environment.yml  example_container_writer.ipynb  execute_ipynbs.py  genindex.html  hillas.py  index.html  install_miniconda.sh  install_target.sh  json_to_fits.fits  objects.inv  (+18 more)
.github/: dependabot.yml  install.sh  release-drafter.yml
MAGIC/: merpp2hdf5.ipynb  sorcerer2hdf5.ipynb  sorcerer2hdf5.py  sorcerer2hdf5_deprecated.ipynb
_images/: inheritance-0650ddce412291b4258dab31cb648bbc4f9212ab.png.map  inheritance-0680a163c4c3dfad4aea157e9953c0071314f326.png.map  inheritance-0f4e5073358564ab41ee103e01e7524eadae5161.png.map  inheritance-1af2e2ed6977b2a99b2b0fd53b41c05d7b8173e0.png.map  inheritance-2917c4da7888a42918fff63a8392a8adc7ab4f52.png.map  inheritance-2d1fc6f7c816e91a81be1c1ad550d755b42406e8.png.map  inheritance-34a5294988a5ea4fcb658f6b41265bf8c32c43c9.png.map  inheritance-399c27249feabfec8aeb40743fc5c933ae11e3df.png.map  inheritance-3a0d87f55e410be99a55db94534ada645465bec5.png.map  inheritance-3a78555b1d19987e52b2ff94a13cc3fa9ee6dc06.png.map  inheritance-47319423edd6e98b81b4bb3b90b04c4b6108eb32.png.map  inheritance-4c0536beeabf135dc5b550353aa0c685142ef7de.png.map  inheritance-4e25c0453bf37c46aa9ed3d4ffb6ed019b001848.png.map  inheritance-53a1de82b13ad3fcdde6e38ca5c078ea57e7ec6b.png.map  inheritance-5462b04f4a62ccf2362f3434e0af94d8749c74f4.png.map  inheritance-58e0da2557415a8f2c06702c48e7e3bfcb2130a5.png.map  inheritance-5b8dd5714213853a24105561d4a240bee054dd60.png.map  inheritance-78baa74a5c889d3b92cd69aeed595a34c5c50f15.png.map  inheritance-7b7a4de83b4d4d1629b9ee00f2e10b7cb30731cb.png.map  inheritance-8a21025c60cc1a445334002855caa4306eed1ef5.png.map  inheritance-a0af7035ce261bee5938e8d637c52f13ce9ef0ce.png.map  inheritance-b73d04527d6c3e428fae2b213ab72794210dd20e.png.map  inheritance-c07a513c1db61d8bf08903c16be0a67f4fb80f90.png.map  inheritance-c5cc42931eb72a7ce80dda59a0986e107466dd79.png.map  inheritance-c74c503f56904e3a822eb1a84a2a7fff649033c7.png.map  inheritance-c9b4299430a4886eda9a2044dc7060deddfa3860.png.map  inheritance-d62c8d5c9f31d3fb71e06c0181cb02c1301bde76.png.map  inheritance-d660bf9f2f3e542dc208f96718a5aa16766c1a20.png.map  inheritance-da49539e059cdb62cf920b1998b05fb1ea29a08b.png.map  inheritance-dac1f49176fbb5bd1d054d2ec4b3f560b325f441.png.map  inheritance-dd16cd8e5c0315065481bdffa26d47386ff215e6.png.map  inheritance-dd6cf6af9d3efc6cbaa0ac8db10f70d045c2a226.png.map  inheritance-e62d45396917096af9df2ec402b4a37eff51d58a.png.map  inheritance-ee459a3e8c2e1c8bbb776c79d8231551be5c5954.png.map
_modules/: index.html
_sources/: bibliography.rst.txt  changelog.rst.txt
_static/: documentation_options.js
api/: ctapipe.analysis.camera.ChargeResolutionCalculator.html  ctapipe.atmosphere.AtmosphereDensityProfile.html  ctapipe.atmosphere.ExponentialAtmosphereDensityProfile.html  ctapipe.atmosphere.FiveLayerAtmosphereDensityProfile.html  ctapipe.atmosphere.TableAtmosphereDensityProfile.html  ctapipe.calib.CameraCalibrator.html  ctapipe.calib.GainSelector.html  ctapipe.calib.camera.CameraCalibrator.html  ctapipe.calib.camera.GainSelector.html  ctapipe.calib.camera.calibrator.CameraCalibrator.html  ctapipe.calib.camera.gainselection.GainChannel.html  ctapipe.calib.camera.gainselection.GainSelector.html  ctapipe.calib.camera.gainselection.ManualGainSelector.html  ctapipe.calib.camera.gainselection.ThresholdGainSelector.html  ctapipe.containers.ArrayEventContainer.html  ctapipe.containers.BaseHillasParametersContainer.html  ctapipe.containers.BaseTimingParametersContainer.html  ctapipe.containers.CameraHillasParametersContainer.html  ctapipe.containers.CameraTimingParametersContainer.html  ctapipe.containers.ConcentrationContainer.html  ctapipe.containers.CoreParametersContainer.html  ctapipe.containers.DL0CameraContainer.html  ctapipe.containers.DL0Container.html  ctapipe.containers.DL1CameraCalibrationContainer.html  ctapipe.containers.DL1CameraContainer.html  ctapipe.containers.DL1Container.html  ctapipe.containers.DL2Container.html  ctapipe.containers.DispContainer.html  ctapipe.containers.EventCalibrationContainer.html  ctapipe.containers.EventCameraCalibrationContainer.html  ctapipe.containers.EventIndexContainer.html  ctapipe.containers.EventType.html  ctapipe.containers.FlatFieldContainer.html  ctapipe.containers.HillasParametersContainer.html  ctapipe.containers.ImageParametersContainer.html  ctapipe.containers.IntensityStatisticsContainer.html  ctapipe.containers.LeakageContainer.html  ctapipe.containers.MonitoringCameraContainer.html  ctapipe.containers.MonitoringContainer.html  ctapipe.containers.MorphologyContainer.html  (+348 more)
astropy_helpers/: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTING.md  LICENSE.rst  MANIFEST.in  README.rst  appveyor.yml  setup.cfg  setup.py  tox.ini
cextern/: README.rst
ci/: install.sh  py3.6_env.yaml  py3.7_env.yaml  py3.8_env.yaml
ctapipe/: __init__.py  __main__.py  _dev_version.py  _version_cache.py  atmosphere.py  compat.py  conftest.py  containers.py  exceptions.py  fitting.py  random.py  version.py
ctapipe_api/: containers.html  index.html
ctapipe_resources/: CTA-ULTRA6-SCT.cfg  __init__.py  hess_arraylayout.fits
data_models/: dl1.html  index.html
datasets/: config.json
development/: code-guidelines.html  index.html  maintainer-info.html  pullrequests.html  rootmigration.html  style-guide.html  support-libraries.html
docs/: FAQ.rst  Makefile  bibliography.rst  changelog.rst  conf.py  conftest.py  index.html  index.rst  make.bat  references.bib  (+4 more)
test_plugin/: pyproject.toml
test_plugin/ctapipe_test_plugin/: __init__.py
(+2570 files in other folders)
