[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1


[tool:pytest]
minversion=3.0
norecursedirs=build docs/_build
addopts = -v


[aliases]
test=pytest


[metadata]
name = ctapipe
description = CTA Python pipeline experimental version
long_description = file: README.rst
author = ctapipe developers
author_email = karl.kosack@cea.fr
license = BSD 3-Clause License
url = https://github.com/cta-observatory/ctapipe
edit_on_github = False
github_project = cta-observatory/ctapipe

[flake8]
exclude=
  build,
  docs,
  .eggs
max-line-length=90
#ignore=W291,E303,W391,F403,F401,W503,W1202
select = C,E,F,W,B,B950
ignore = E501,W503,E203

[pycodestyle]
count = False
ignore = E501,W503,E203
max-line-length = 90
statistics = True

[yapf] # a code reformatter
based_on_style: pep8
dedent_closing_brackets: true
coalesce_brackets: true
join_multiple_lines: true
