[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1


[tool:pytest]
minversion=3.0
norecursedirs=build docs/_build
addopts = -v
astropy_header = true
filterwarnings =
    ignore:`np.MachAr` is deprecated:DeprecationWarning

[aliases]
test=pytest


[metadata]
name = ctapipe
description = CTA Python pipeline experimental version
long_description = file: README.rst
author = ctapipe developers
author_email = karl.kosack@cea.fr
license = BSD 3-Clause License
url = https://github.com/cta-observatory/ctapipe
edit_on_github = False
github_project = cta-observatory/ctapipe

[flake8]
exclude=
  build,
  docs,
  .eggs
max-line-length=90
#ignore=W291,E303,W391,F403,F401,W503,W1202
select = C,E,F,W,B,B950
ignore = E501,W503,E203,W201,E712,E731
per-file-ignores =
    */__init__.py: F401, F403

[pycodestyle]
count = False
ignore = E501,W503,E203,W201
max-line-length = 90
statistics = True

[yapf] # a code reformatter
based_on_style: pep8
dedent_closing_brackets: true
coalesce_brackets: true
join_multiple_lines: true
